# feature-voter

./: .gitignore  AGENTS.md  Makefile  README.md  prompts.txt
backend/: .env.example  pyproject.toml
backend/accounts/: admin.py  serializers.py  tests.py  urls.py  views.py
backend/core/: settings.py  urls.py
backend/voting/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/voting/migrations/: 0001_initial.py  0002_category.py  0003_default_category.py  0004_featurerequest_category.py
docs/: api-patterns.md  api-voting.md  ui-lib.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: FeatureForm.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useCategories.ts  useCreateFeature.ts  useCurrentUser.ts  useDeleteFeature.ts  useFeatureRequest.ts  useFeatureRequests.ts  useForgotPassword.ts  useLogin.ts  useResetPassword.ts  useTheme.ts  useUnvote.ts  useUpdateFeature.ts  useVote.ts
frontend/src/pages/app/: AppLayout.tsx  EditFeaturePage.tsx  FeatureCard.tsx  HomePage.tsx  NewFeaturePage.tsx  Pagination.tsx
frontend/src/pages/auth/: AuthLayout.tsx  ForgotPasswordPage.tsx  LoginPage.tsx  ResetPasswordPage.tsx
frontend/src/services/: api.ts  auth.ts  categories.ts  features.ts
frontend/src/ui/: Button.tsx  Dialog.tsx  Dropdown.tsx  Input.tsx  MarkdownContent.tsx  MarkdownEditor.tsx  Select.tsx  Textarea.tsx  index.ts
