[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Nils Alexandre Bergsten",email = "nilsalexberg@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
